# us-funds-performance

./: .gitignore  Dockerfile  README.md  pyproject.toml
.dbt/: profiles.yml
streamlit_app/: app.py  app2.py  etf_app.py  mutual_fund_app.py  queries.py  table.html  utils.py
us_funds_dbt/: dbt_project.yml
us_funds_dbt/models/etfs/: dim_etf.sql  dim_holdings.sql  dim_holdings_enriched.sql  dim_sectors.sql  dim_strategy.sql  fact_etfs.sql
us_funds_dbt/models/mutual_funds/: dim_mutal_funds.sql  dim_mutual_funds_holdings.sql  dim_mutual_funds_strategy.sql  fact_mutual_funds.sql
us_funds_dbt/models/staging/: sources.yml  stg_etf.sql  stg_etf_prices.sql  stg_mutual_funds.sql  stg_mutual_funds_prices.sql
