[tool.poetry]
name = "US-funds-project"
version = "0.1.0"
description = ""
authors = ["Carla Teixeira Coutinho"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.3"
dbt-duckdb = "^1.7.1"
dbt-core = "^1.7.8"
apache-superset = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"